[package]
name = "expand-tilde"
version = "0.6.1"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2024"
description = "Expanding tildes in paths."
documentation = "https://docs.rs/expand-tilde"
readme = "README.md"
repository = "https://github.com/nekitdev/expand-tilde"
license = "MIT"
keywords = ["path", "tilde", "expand"]

[dependencies.home]
version = "0.5.11"

[dependencies.miette]
version = "7.5.0"
optional = true

[dependencies.thiserror]
version = "2.0.12"

[features]
default = []
diagnostics = ["dep:miette"]
